<resources>
    <string name="app_name">Sports Buddy</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_event_details">Event Details</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="my_events">My Events</string>
    <string name="explore">Explore</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="my_teams">My Teams</string>
    <string name="logout">Logout</string>
    <string name="communicate">Communicate</string>
    <string name="login_email">Email ID</string>
    <string name="login_password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="create_event">Create Event</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="already_registered_text">Already Registered? Login Here!</string>
    <string name="register">Register</string>
    <string name="contact_hint">Phone</string>
    <string name="email_hint">EMail</string>
    <string name="full_name_hint">Full Name</string>
    <string name="password_hint">Password</string>
    <string name="change_profile_image">Change Profile Image</string>

    <string name="event_eventname">Event Name</string>
    <string name="event_eventstartdate">Start Date</string>
    <string name="event_eventstarttimme">Start Time</string>
    <string name="event_eventendtime">End Time</string>
    <string name="event_eventenddate">End Date</string>
    <string name="event_teamcheckbox">Team Event</string>
    <string name="event_reqdpeople">Required People/Teams</string>
    <string name="event_gametypecheckbox">Competition</string>
    <string name="event_prizemoney">Prize Money</string>
    <string name="event_addevent">Add Event</string>
    <string name="event_teamsize">Team Size</string>
    <string name="modify_event">Modify Event</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="location">Location</string>
    <string name="show_map">Show Map</string>
    <string name="join_event">Join Event</string>
    <string name="message_event_organizer">Message Event Organizer</string>
    <string name="messages">Messages</string>


    <!-- Interests -->
    <string-array name="interests">
        <item>Swimming</item>
        <item>Running</item>
        <item>Gym</item>
    </string-array>
</resources>
