<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="20dp"
    android:paddingTop="20dp"
    android:paddingRight="20dp"
    android:paddingLeft="20dp"
    tools:context=".RegisterActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/full_name_hint" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_layout_full_name">

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_layout_email">

        <EditText
            android:id="@+id/et_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/contact_hint" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_layout_contact">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password_hint" />

    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:layout_below="@id/input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_interest_1"/>

    <Spinner
        android:layout_below="@id/spinner_interest_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:id="@+id/spinner_interest_2"/>

    <Spinner
        android:layout_below="@+id/spinner_interest_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_interest_3"/>

    <Button
        android:layout_below="@+id/spinner_interest_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/register_button"
        android:onClick="register"
        android:drawableStart="@drawable/ic_launcher_background" />

    <TextView
        android:layout_below="@+id/register_button"
        android:id="@+id/register_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/already_registered_text"/>
</RelativeLayout>